[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main/result/buttonPlayerResult.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/result/font/static/Oswald-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main/result/resultbutton.gd" type="Script" id=3]
[ext_resource path="res://Main/result/fond3.png" type="Texture" id=4]
[ext_resource path="res://Main/result/result.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TextureRect" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
result = ExtResource( 5 )

[node name="resultbutton" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="resultbutton"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 30

[node name="titre" type="Label" parent="resultbutton/VBoxContainer"]
margin_right = 984.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "RÃ©sultats"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="resultbutton/VBoxContainer"]
margin_top = 135.0
margin_right = 984.0
margin_bottom = 465.0
custom_constants/separation = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="resultbutton/VBoxContainer/HBoxContainer"]
margin_right = 477.0
margin_bottom = 330.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Player1" parent="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
margin_right = 477.0
margin_bottom = 150.0

[node name="Player2" parent="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 180.0
margin_right = 477.0
margin_bottom = 330.0

[node name="VBoxContainer" type="VBoxContainer" parent="resultbutton/VBoxContainer/HBoxContainer"]
margin_left = 507.0
margin_right = 984.0
margin_bottom = 330.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Player3" parent="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 477.0
margin_bottom = 150.0

[node name="Player4" parent="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 180.0
margin_right = 477.0
margin_bottom = 330.0
[connection signal="pressed" from="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer2/Player1" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer2/Player2" to="." method="_on_Player2_pressed"]
[connection signal="pressed" from="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer/Player3" to="." method="_on_Player3_pressed"]
[connection signal="pressed" from="resultbutton/VBoxContainer/HBoxContainer/VBoxContainer/Player4" to="." method="_on_Player4_pressed"]
